feat: remotely search OpenAPI services
